--- a/ProiectASPNET/ProiectASPNET/appsettings.Development.json
+++ b/ProiectASPNET/ProiectASPNET/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=HaiCraiovaBazaDeDate; Trusted_Connection=True; TrustServerCertificate=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
