auth update - still not working properly

--- a/ProiectASPNET/ProiectASPNET/appsettings.json
+++ b/ProiectASPNET/ProiectASPNET/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "AppSettings": {
+    "JwtSecret": "FCSBeSteaua"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
