Auth is working

--- a/ProiectASPNET/ProiectASPNET/appsettings.json
+++ b/ProiectASPNET/ProiectASPNET/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "JwtSecret": "FCSBeSteaua"
+    "JwtToken": "FCSBeSteauaFCUeCraiova"
   },
   "Logging": {
     "LogLevel": {
