--- a/ProiectASPNET/ProiectASPNET/ProiectASPNET.csproj
+++ b/ProiectASPNET/ProiectASPNET/ProiectASPNET.csproj
@@ -35,7 +35,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\components\data\data.component.ts" />
+    <None Remove="ClientApp\src\app\services\data.service.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\components\data\data.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\services\data.service.ts" />
   </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
