--- a/ProiectASPNET/ProiectASPNET/ProiectASPNET.csproj
+++ b/ProiectASPNET/ProiectASPNET/ProiectASPNET.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\components\data\data.component.ts" />
     <None Remove="ClientApp\src\app\services\data.service.ts" />
+    <None Remove="ClientApp\src\app\services\review.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,6 +47,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\components\data\data.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\services\data.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\services\review.service.ts" />
   </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
