--- a/ProiectASPNET/ProiectASPNET/ProiectASPNET.csproj
+++ b/ProiectASPNET/ProiectASPNET/ProiectASPNET.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\components\data\data.component.ts" />
     <None Remove="ClientApp\src\app\services\data.service.ts" />
+    <None Remove="ClientApp\src\app\services\quote.service.ts" />
     <None Remove="ClientApp\src\app\services\review.service.ts" />
   </ItemGroup>
 
@@ -47,6 +48,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\components\data\data.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\services\data.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\services\quote.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\services\review.service.ts" />
   </ItemGroup>
 
