added username to reviews and quotes

--- a/ProiectASPNET/ProiectASPNET/ProiectASPNET.csproj
+++ b/ProiectASPNET/ProiectASPNET/ProiectASPNET.csproj
@@ -39,6 +39,7 @@
     <None Remove="ClientApp\src\app\services\data.service.ts" />
     <None Remove="ClientApp\src\app\services\quote.service.ts" />
     <None Remove="ClientApp\src\app\services\review.service.ts" />
+    <None Remove="ClientApp\src\app\services\user.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -50,6 +51,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\services\data.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\services\quote.service.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\services\review.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\services\user.service.ts" />
   </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
