--- a/ProiectASPNET/ProiectASPNET/ClientApp/package.json
+++ b/ProiectASPNET/ProiectASPNET/ClientApp/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^14.0.3",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
@@ -49,6 +50,5 @@
   },
   "overrides": {
     "autoprefixer": "10.4.5"
-  },
-  "optionalDependencies": {}
+  }
 }
